--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
               "node_modules/font-awesome/css/font-awesome.css",
               "src/assets/css/font-awesome.min.css",
               "src/assets/css/stylesheet.css",
+              "src/assets/css/custom-style.css",
               "src/styles.css"
             ],
             "scripts": [
