--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,8 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.css",
               "src/assets/css/font-awesome.min.css",
+              "node_modules/slick-carousel/slick/slick.css",
+              "node_modules/slick-carousel/slick/slick-theme.css",
               "src/assets/css/stylesheet.css",
               "src/assets/css/custom-style.css",
               "src/styles.css"
@@ -39,6 +41,7 @@
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/slick-carousel/slick/slick.min.js",
               "src/assets/js/site-scripts.js"
             ]
           },
