--- a/package.json
+++ b/package.json
@@ -24,14 +24,17 @@
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/platform-server": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@nguniversal/express-engine": "^11.0.1",
     "bootstrap": "^4.6.0",
     "express": "^4.15.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-slick-carousel": "^0.5.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
+    "slick-carousel": "^1.8.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
