--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,7 @@
               "src/assets/css/font-awesome.min.css",
               "node_modules/slick-carousel/slick/slick.css",
               "node_modules/slick-carousel/slick/slick-theme.css",
+              "node_modules/aos/dist/aos.css",
               "src/assets/css/custom-style.css",
               "src/assets/css/stylesheet.css",
               "src/styles.css"
@@ -42,6 +43,7 @@
               "node_modules/popper.js/dist/umd/popper.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/slick-carousel/slick/slick.min.js",
+              "node_modules/aos/dist/aos.js",
               "src/assets/js/site-scripts.js"
             ]
           },
