--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@angular/router": "~11.0.5",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@nguniversal/express-engine": "^11.0.1",
+    "@types/aos": "^3.0.3",
+    "aos": "^2.3.4",
     "bootstrap": "^4.6.0",
     "express": "^4.15.2",
     "font-awesome": "^4.7.0",
